core/testing/error_snapshots/runtime/division_by_zero.snap
x = 1 / 0
### EXPECTED ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:1:9
  |
1 | x = 1 / 0
  |         ^
  |
   = info: rad explain RAD20036

